# the-api

./: .gitignore  CHANGELOG.md  README.md  coverage.lcov  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: testing.yml
src/the_api/: __init__.py
tests/: __init__.py  test_the_api.py
