[project]
name = "the-api"
version = "0.1.0"
description = "Base for a full-featured API built with FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Grant Ramsay", email = "grant@gnramsay.com" }]
dependencies = ["fastapi[standard]>=0.115.0"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
# "HomeHage" = "https://xxxxxx"
"Pull Requests" = "https://github.com/seapagan/the-api/pulls"
"Bug Tracker" = "https://github.com/seapagan/the-api/issues"
"Changelog" = "https://github.com/seapagan/the-api/blob/main/CHANGELOG.md"
"Repository" = "https://github.com/seapagan/the-api"

[project.scripts]
the-api = "the_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "github-changelog-md>=0.9.5",
    "mock>=5.1.0",
    "mypy>=1.11.2",
    "poethepoet>=0.29.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.15.0",
    "pytest-reverse>=1.7.0",
    "pytest-sugar>=1.0.0",
    "pytest-watcher>=0.4.3",
    "ruff>=0.6.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.38",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-minify-plugin>=0.8.0",
    "pygments>=2.18.0",
]

[tool.poe.tasks]
pre.cmd = "pre-commit run --all-files"
pre.help = "Run pre-commit checks"

mypy.cmd = "mypy . --strict"
mypy.help = "Run mypy checks"
format.cmd = "ruff format ."
format.help = "Format code with Ruff"
ruff.cmd = "ruff check --output-format=concise ."
ruff.help = "Run Ruff checks"

test.cmd = "pytest"
test.help = "Run tests using Pytest"
"test:watch".cmd = "ptw . --now --clear"
"test:watch".help = "Run tests using Pytest in watch mode"

changelog.cmd = "github-changelog-md"
changelog.help = "Generate a changelog"

"docs:publish".cmd = "mkdocs gh-deploy"
"docs:publish".help = "Publish documentation to GitHub Pages"
"docs:build".cmd = "mkdocs build"
"docs:build".help = "Build documentation locally to './site' folder"
"docs:serve".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md"
"docs:serve".help = "Serve documentation locally"
"docs:serve:all".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md -a 0.0.0.0:9000"
"docs:serve:all".help = "Serve documentation locally on all interfaces"
[tool.ruff]
line-length = 80
lint.select = ["ALL"] # we are being very strict!
lint.ignore = [
    "ANN101",
    "ANN102",
    "PGH003",
    "FBT002",
    "FBT003",
    "B006",
] # These rules are too strict even for us 😝
lint.extend-ignore = [
    "COM812",
    "ISC001",
] # these are ignored for ruff formatting

src = ["src/the_api"]
target-version = "py39" # minimum python version supported

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # we can (and MUST!) use 'assert' in test files.
    "ANN001",  # annotations for fixtures are sometimes a pain for test files
    "ARG00",   # test fixtures often are not directly used
    "PLR2004", # magic numbers are often used in test files
    "SLF001",  # sometimes we need to test private methods
]

[tool.ruff.lint.isort]
known-first-party = ["sqliter"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.9"
exclude = ["docs"]

[[tool.mypy.overrides]]
disable_error_code = ["method-assign", "no-untyped-def", "attr-defined"]
module = "tests.*"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report",
    "term-missing",
    "--cov-report",
    "html",
    "--cov-report",
    "lcov",
]
filterwarnings = [
    "ignore:'direction' argument is deprecated:DeprecationWarning",
]
mock_use_standalone_module = true
markers = []

[tool.coverage.run]
source = ["src/the_api"]
omit = ["*/tests/*"]
